# balcony-ai

./: LICENSE.txt  Makefile  README.md  download-lite-models.sh  env-activate.sh  env-setup.sh  links_and_info.md  pyproject.toml  requirements.txt  test-cli.sh  test-experiments-pipeline.sh  test-model-versions.sh  test-tflite.py
ansible/: ansible.cfg
ansible/inventory/: hosts.yml
ansible/playbooks/: check.yml  setup.yaml
ansible/playbooks/todo-convert_me_to_playbook/: build_tflite_runtime.sh  env-setup.sh  env-test.sh  env_test.py  setup_build_machine.sh
ansible/tasks/: docker.yaml
coral-setup/: tflite_runtime-2.16.1-cp311-linux_aarch64.whl
docker/: Dockerfile  build.sh  run.sh
docs/: compile_tflite_runtime.sh  coral_setup_adventures.md  links_and_info.md  rpi_playbook.md
models/: edgetpu_compiler_logs
src/birds/: __about__.py  __init__.py  main.py  test_tf_model.py  web_app.py  web_app_tflite.py
src/birds/lib/: coco_labels.py  colors.py  image_detection.py  image_postprocessing.py  image_preprocessing.py  logger.py  tf_models.py  utils.py
