[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birds"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Valerii Burlaka", email = "valerii.burlaka88@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Valeriy-Burlaka/balcony-ai#readme"
Issues = "https://github.com/Valeriy-Burlaka/balcony-ai/issues"
Source = "https://github.com/Valeriy-Burlaka/balcony-ai"

[tool.hatch.version]
path = "src/birds/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "kagglehub",
  "numpy",
  "opencv-python-headless",
  "pillow",
  "rich",
  "scipy",
  "streamlit",
  "streamlit-cropper",
  "timm",
  "torch",
  "torchvision",
  "torchaudio",
  "transformers",
  "watchdog",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/birds tests}"

[tool.hatch.envs.jupyter]
extra-dependencies = [
  "jupyterlab",
]

[tool.coverage.run]
source_pkgs = ["birds", "tests"]
branch = true
parallel = true
omit = [
  "src/birds/__about__.py",
]

[tool.coverage.paths]
birds = ["src/birds", "*/birds/src/birds"]
tests = ["tests", "*/birds/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
